--- a/local_llms/examples/qwen25_template.jinja
+++ b/local_llms/examples/qwen25_template.jinja
@@ -1,11 +1,9 @@
-{{ bos_token }}
-
 {%- if tools %}
-    {{- '<start_of_turn>system\n' }}
+    {{- '<|im_start|>system\n' }}
     {%- if messages[0]['role'] == 'system' %}
         {{- messages[0]['content'] }}
     {%- else %}
-        {{- 'You are Gemma3, created by Google DeepMind. You are a helpful assistant.' }}
+        {{- 'You are Qwen, created by Alibaba Cloud. You are a helpful assistant.' }}
     {%- endif %}
     {{- "\n\n# Tools\n\nYou may call one or more functions to assist with the user query.\n\nYou are provided with function signatures within <tools></tools> XML tags:\n<tools>" }}
     {%- for tool in tools %}
@@ -15,16 +13,16 @@
     {{- "\n</tools>\n\nFor each function call, return a json object with function name and arguments within <tool_call></tool_call> XML tags:\n<tool_call>\n{\"name\": <function-name>, \"arguments\": <args-json-object>}\n</tool_call><|im_end|>\n" }}
 {%- else %}
     {%- if messages[0]['role'] == 'system' %}
-        {{- '<start_of_turn>system\n' + messages[0]['content'] + '<end_of_turn>\n' }}
+        {{- '<|im_start|>system\n' + messages[0]['content'] + '<|im_end|>\n' }}
     {%- else %}
-        {{- '<start_of_turn>system\nYou are Gemma3, created by Google DeepMind. You are a helpful assistant.<end_of_turn>\n' }}
+        {{- '<|im_start|>system\nYou are Qwen, created by Alibaba Cloud. You are a helpful assistant.<|im_end|>\n' }}
     {%- endif %}
 {%- endif %}
 {%- for message in messages %}
     {%- if (message.role == "user") or (message.role == "system" and not loop.first) or (message.role == "assistant" and not message.tool_calls) %}
-        {{- '<start_of_turn>' + message.role + '\n' + message.content + '<end_of_turn>' + '\n' }}
+        {{- '<|im_start|>' + message.role + '\n' + message.content + '<|im_end|>' + '\n' }}
     {%- elif message.role == "assistant" %}
-        {{- '<start_of_turn>' + message.role }}
+        {{- '<|im_start|>' + message.role }}
         {%- if message.content %}
             {{- '\n' + message.content }}
         {%- endif %}
@@ -38,19 +36,19 @@
             {{- tool_call.arguments | tojson }}
             {{- '}\n</tool_call>' }}
         {%- endfor %}
-        {{- '<end_of_turn>\n' }}
+        {{- '<|im_end|>\n' }}
     {%- elif message.role == "tool" %}
         {%- if (loop.index0 == 0) or (messages[loop.index0 - 1].role != "tool") %}
-            {{- '<start_of_turn>user' }}
+            {{- '<|im_start|>user' }}
         {%- endif %}
         {{- '\n<tool_response>\n' }}
         {{- message.content }}
         {{- '\n</tool_response>' }}
         {%- if loop.last or (messages[loop.index0 + 1].role != "tool") %}
-            {{- '<end_of_turn>\n' }}
+            {{- '<|im_end|>\n' }}
         {%- endif %}
     {%- endif %}
 {%- endfor %}
 {%- if add_generation_prompt %}
-    {{- '<start_of_turn>assistant\n' }}
+    {{- '<|im_start|>assistant\n' }}
 {%- endif %}
