--- a/local_llms/examples/gemma3_template.jinja
+++ b/local_llms/examples/gemma3_template.jinja
@@ -1,44 +1,86 @@
-{{ bos_token }}
+{{- bos_token }}
+{%- if custom_tools is defined %}
+    {%- set tools = custom_tools %}
+{%- endif %}
+{%- if not tools_in_user_message is defined %}
+    {%- set tools_in_user_message = true %}
+{%- endif %}
+{%- if not tools is defined %}
+    {%- set tools = none %}
+{%- endif %}
 
-{%- if messages[0]['role'] == 'system' -%}
-  {%- if messages[0]['content'] is string -%}
-    {%- set first_user_prefix = messages[0]['content'] + '\n' -%}
-  {%- else -%}
-    {%- set first_user_prefix = messages[0]['content'][0]['text'] + '\n' -%}
-  {%- endif -%}
-  {%- set loop_messages = messages[1:] -%}
-{%- else -%}
-  {%- set first_user_prefix = "" -%}
-  {%- set loop_messages = messages -%}
-{%- endif -%}
+{#- This block extracts the system message, so we can slot it into the right place. #}
+{%- if messages[0]['role'] == 'system' %}
+    {%- set system_message = messages[0]['content']|trim %}
+    {%- set messages = messages[1:] %}
+{%- else %}
+    {%- set system_message = "" %}
+{%- endif %}
 
-{%- for message in loop_messages -%}
-  
-  {%- if (message['role'] == 'assistant') -%}
-    {%- set role = "model" -%}
-  {%- else -%}
-    {%- set role = message['role'] -%}
-  {%- endif -%}
-  
-  {{ '<start_of_turn>' + role + '\n' + (first_user_prefix if loop.first else "") }}
-  
-  {%- if message['content'] is string -%}
-    {{ message['content'] }}
-  {%- elif message['content'] is iterable -%}
-    {%- for item in message['content'] -%}
-      {%- if item['type'] == 'image' -%}
-        {{ '<start_of_image>' }}
-      {%- elif item['type'] == 'text' -%}
-        {{ item['text'] }}
-      {%- endif -%}
-    {%- endfor -%}
-  {%- else -%}
-    {{ "" }}
-  {%- endif -%}
-  
-  {{ '<end_of_turn>\n' }}
-{%- endfor -%}
+{#- System message #}
+{{- "<start_of_turn>system\n\n" }}
+{%- if tools is not none %}
+    {{- "Environment: ipython\n" }}
+{%- endif %}
+{{- "Cutting Knowledge Date: December 2023\n" }}
+{{- "Today Date: " + date_string + "\n\n" }}
+{%- if tools is not none and not tools_in_user_message %}
+    {{- "You have access to the following functions. To call a function, please respond with JSON for a function call." }}
+    {{- 'Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}.' }}
+    {{- "Do not use variables.\n\n" }}
+    {%- for t in tools %}
+        {{- t | tojson(indent=4) }}
+        {{- "\n\n" }}
+    {%- endfor %}
+{%- endif %}
+{{- system_message }}
+{{- "<end_of_turn>\n" }}
 
-{%- if add_generation_prompt -%}
-  {{ '<start_of_turn>model\n' }}
-{%- endif -%}
+{#- Custom tools are passed in a user message with some extra guidance #}
+{%- if tools_in_user_message and not tools is none %}
+    {#- Extract the first user message so we can plug it in here #}
+    {%- if messages | length != 0 %}
+        {%- set first_user_message = messages[0]['content']|trim %}
+        {%- set messages = messages[1:] %}
+    {%- else %}
+        {{- raise_exception("Cannot put tools in the first user message when there's no first user message!") }}
+{%- endif %}
+    {{- '<start_of_turn>user\n\n' -}}
+    {{- "Given the following functions, please respond with a JSON for a function call " }}
+    {{- "with its proper arguments that best answers the given prompt.\n\n" }}
+    {{- 'Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}.' }}
+    {{- "Do not use variables.\n\n" }}
+    {%- for t in tools %}
+        {{- t | tojson(indent=4) }}
+        {{- "\n\n" }}
+    {%- endfor %}
+    {{- first_user_message + "<end_of_turn>\n" }}
+{%- endif %}
+
+{%- for message in messages %}
+    {%- if not (message.role == 'ipython' or message.role == 'tool' or 'tool_calls' in message) %}
+        {{- '<start_of_turn>' + message['role'] + '<end_of_turn>\n\n'+ message['content'] | trim + '<end_of_turn>\n' }}
+    {%- elif 'tool_calls' in message %}
+        {%- if not message.tool_calls|length == 1 %}
+            {{- raise_exception("This model only supports single tool-calls at once!") }}
+        {%- endif %}
+        {%- set tool_call = message.tool_calls[0].function %}
+        {{- '<start_of_turn>assistant\n\n' -}}
+        {{- '{"name": "' + tool_call.name + '", ' }}
+        {{- '"parameters": ' }}
+        {{- tool_call.arguments | tojson }}
+        {{- "}" }}
+        {{- "<end_of_turn>\n" }}
+    {%- elif message.role == "tool" or message.role == "ipython" %}
+        {{- "<start_of_turn>ipython\n\n" }}
+        {%- if message.content is mapping or message.content is iterable %}
+            {{- message.content | tojson }}
+        {%- else %}
+            {{- message.content }}
+        {%- endif %}
+        {{- "<end_of_turn>\n" }}
+    {%- endif %}
+{%- endfor %}
+{%- if add_generation_prompt %}
+    {{- '<start_of_turn>assistant\n\n' }}
+{%- endif %}
